feat: Add animations and improve library UI
Introduce CSS animations for fading and sliding effects.
Enhance the book cover images in the Library component with lazy loading.
Refine button label display in the Library component to use plain text.
Remove the unused LiveAssistant component.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       font-family: 'Inter', sans-serif;
       color: var(--color-text);
       background-color: var(--color-white-editorial);
+      margin: 0;
+      padding: 0;
     }
     h1, h2, h3, .serif {
       font-family: 'Libre+Baskerville', serif;
@@ -53,6 +55,23 @@
     .text-balance {
       text-wrap: balance;
     }
+    
+    /* Animaciones personalizadas */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+      animation: fadeIn 1s ease-out forwards;
+    }
+    .animate-slide-up {
+      animation: slideUp 0.8s ease-out forwards;
+    }
+    
     .bg-editorial-grey { background-color: var(--color-grey-soft); }
     .bg-editorial-primary { background-color: var(--color-primary); }
     .bg-editorial-secondary { background-color: var(--color-secondary); }
