--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="selection:bg-[#4db380]/30">
   <div id="root"></div>
   <script type="module" src="index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
